# Trace-Protocol

./: Cargo.toml  README.md
src/: crt.rs  lib.rs  main.rs  matrix.rs  poly.rs  protocol.rs  regev.rs  secret_sharing.rs  signature.rs  transcript.rs  trapdoor.rs  zkp.rs
