[package]
name = "rust_deanonymisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = '0.8.5'
merlin = '3.0.0'
num-traits = '0.2.19'
num-bigint = { version = '0.4.6', features = ["rand"] }
num-bigfloat = '1.7.1'
concrete-ntt = '0.2.0'
lazy_static = '1.5.0'
rayon = '1.10.0'